# ainish-coder

./: .clinerules  .copilotignore  .cursorignore  .cursorindexignore  .cursorrules  .gitignore  2026_PROMPT_INJECTION_RESEARCH.md  2026_SECURITY_RESEARCH.md  AGENTS-239-may-23-2026-NO-COD-HEMI-UV.md  AGENTS-239-may-23-2026.md  AGENTS-447-may22-2026.md  AGENTS-improved.md  AGENTS-old.md  AGENTS-review.md  AGENTS-short.md  AGENTS-tiny.md  AGENTS.md  AGENTS.md.backup-5-29-2026  AGENTS_CODE_SECURITY.md  AGENTS_LLM_SECURITY.md  AGENTS_SECURE.md  AGENTS_backup_may7_2026.md  CHECKLIST.md  CLAUDE_CODE_RALPH_LOOP.md  CORRECTION_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  MAIRULES.md  OSA.md  OSAA.md  OSAVARS.md  OSAVARS.toon  PRD.md  PRD.mdc  README.md  SECURITY-PROGRESS.md  TASK.2026-05-27.md  TASK.2026-05-28.md  TODO.md  (+60 more)
.agents/: mcp-settings.json
.backup/: README.md  install.sh
.github/: README.md  copilot-instructions.md
.goose/: AGENTS.md
.llms.txt/: PRD.md  RULES.md  TODO.md  TOON.md
.mai-rules/: MAIRULES.md  critical.md  template-agent-example-python-security.md  template-agent.md
.osa/: CLAUDE_CODE_RALPH_LOOP.md  IMPLEMENTATION.md  OSA.md  OSA.toon  OSAVARS.toon  TODO.md  TOON.md  llms.txt  (+1 more)
.osa-yolo-mode/: OSA_CLI_AGENTS.md  OSA_FRAMEWORK_COMPREHENSIVE.md  OSA_IMPROVEMENT_RECOMMENDATIONS.md
.rules/: MEMORY.md  (+3 more)
osa_expert/: pyproject.toml
osa_expert/skills/: osa-expert.json
osa_expert/src/osa_expert/: __init__.py  brain.py  cli.py  context.py  mcp_server.py  memory.py
src/pqc-secrets/: Cargo.toml
src/pqc-secrets/src/: main.rs
(+465 files in other folders)
