[package]
name = "pqc-secrets"
version = "1.0.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.44"
fips203 = "0.4.3"
getrandom = "0.4.2"
hex = "0.4.3"
security-framework = "3.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha3 = "0.12.0"
zeroize = "1.8.2"
